<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="90dp"
        android:background="@color/black"
        android:padding="20dp"
        android:text="@string/EmployeTask"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_marginTop="180dp">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:ems="12"
             android:id="@+id/taskName"
             android:hint="@string/taskName"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:inputType="text"/>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:ems="12"
             android:id="@+id/taskEmploye"
             android:hint="@string/taskEmploye"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:inputType="text"/>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:ems="12"
             android:id="@+id/task"
             android:hint="@string/task"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:inputType="text"/>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:ems="12"
             android:id="@+id/taskDate"
             android:hint="@string/taskDate"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:inputType="date"/>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:ems="12"
             android:id="@+id/taskDescription"
             android:hint="@string/taskDescription"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:inputType="text"/>

        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="12"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:backgroundTint="@color/black"
             android:text="@string/btnPending"
             android:layout_marginTop="30dp"
             android:id="@+id/btnPending"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="12"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:backgroundTint="@color/black"
             android:text="@string/btnComplete"
             android:layout_marginTop="30dp"
             android:id="@+id/btnComplete"/>


      </LinearLayout>


</RelativeLayout>
